cabal-version:      2.4
name:               ccmsg
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:             BSD-3-Clause
license-file:        LICENSE
author:             octalsrc
maintainer:         nicklewchenko92@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Network.Ccm
                    , Network.Ccm.Bsm
                    , Network.Ccm.Extra
                    , Network.Ccm.Lens
                    , Network.Ccm.Switch
                    , Network.Framed
                    , Control.Monad.DebugLog
                    , Control.Monad.DebugLog.Selector

    -- Modules included in this library but not exported.
    other-modules:
        Network.Ccm.Bsm.Internal,
        Network.Ccm.Bsm.TCP,
        Network.Ccm.Internal,
        Network.Ccm.Sort,
        Network.Ccm.Types,
        Network.Ccm.VClock

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.17.2 && <4.19
                    , cereal
                    , containers
                    , aeson
                    , bytestring
                    , iproute
                    , microlens-platform
                    , mtl
                    , network
                    , network-simple
                    , serialise
                    , stm
                    , store
                    , time
                    , unix
                    , random
                    , parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable ccmsg
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Config, State

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.17.2 && <4.19
                    , ccmsg
                    , bytestring
                    , dhall
                    , store
                    , stm
                    , mtl
                    , containers
                    , text
                    , time
                    , random

    hs-source-dirs:   app
    default-language: Haskell2010
